--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "main": "index.js",
   "scripts": {
     "install:web": "cd web && npm install",
-    "install:mobile": "cd mobile-java && npm install",
-    "install:all": "npm run install:web && npm run install:mobile",
+    "install:all": "npm run install:web",
     "test:web": "cd web && npm test",
-    "test:web:open": "cd web && npm run open",
+    "test:web:open": "cd web && npm run open", 
     "test:mobile": "cd mobile-java && mvn test",
     "test:all": "npm run test:web && npm run test:mobile",
     "allure:web": "cd web && npm run allure:serve",
@@ -16,10 +15,7 @@
     "build": "echo 'Build completed for both projects'",
     "start": "echo 'Use npm run test:web:open to open Cypress or npm run test:mobile for mobile tests'"
   },
-  "workspaces": [
-    "web",
-    "mobile-java"
-  ],
+
   "keywords": [
     "automation",
     "testing",
