--- a/mobile-java/pom.xml
+++ b/mobile-java/pom.xml
@@ -9,6 +9,7 @@
     <maven.compiler.source>21</maven.compiler.source>
     <maven.compiler.target>21</maven.compiler.target>
     <maven.compiler.release>21</maven.compiler.release>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <cucumber.version>7.15.0</cucumber.version>
     <junit.version>5.10.2</junit.version>
     <appium.java.client.version>8.5.1</appium.java.client.version>
